--- a/mods/ts/sequences/misc.yaml
+++ b/mods/ts/sequences/misc.yaml
@@ -382,6 +382,7 @@ resources:
 		Offset: 0, -12, 1
 		ZRamp: 1
 		IgnoreWorldTint: true
+		ZOffset: 2
 		MeshType: Plane # useless, because the terrain meshtype is fixed
 	tib01: tib01
 	tib02: tib02
