--- a/mods/ts/sequences/vehicles.yaml
+++ b/mods/ts/sequences/vehicles.yaml
@@ -33,6 +33,8 @@ harv.gdi:
 		Length: *
 		ZRamp: 1
 		Offset: 0, 0, 1
+		ZOffset: 3
+		MeshType: Plane
 	icon: sidebar-gdi|harvicon
 
 harv.nod:
@@ -42,6 +44,8 @@ harv.nod:
 		Length: *
 		ZRamp: 1
 		Offset: 0, 0, 1
+		ZOffset: 3
+		MeshType: Plane
 	icon: sidebar-nod|harvicon
 
 hvr:
