--- a/mods/ts/sequences/misc.yaml
+++ b/mods/ts/sequences/misc.yaml
@@ -437,6 +437,7 @@ smallscorches:
 		UseTilesetExtension: true
 		Offset: 0, -12, 1
 		ZRamp: 1
+		MeshType: Plane
 	sc1: burnt01
 	sc2: burnt02
 	sc3: burnt03
@@ -449,6 +450,7 @@ mediumscorches:
 		UseTilesetExtension: true
 		Offset: 0, -18, 1
 		ZRamp: 1
+		MeshType: Plane
 	sc7: burnt07
 	sc8: burnt08
 	sc9: burnt09
@@ -459,6 +461,7 @@ largescorches:
 		UseTilesetExtension: true
 		Offset: 0, -24, 1
 		ZRamp: 1
+		MeshType: Plane
 	sc11: burnt11
 	sc12: burnt12
 
@@ -467,6 +470,7 @@ smallcraters:
 		UseTilesetExtension: true
 		Offset: 0, -12, 1
 		ZRamp: 1
+		MeshType: Plane
 	cr1: crater01
 	cr2: crater02
 	cr3: crater03
@@ -479,6 +483,7 @@ mediumcraters:
 		UseTilesetExtension: true
 		Offset: 0, -12, 1
 		ZRamp: 1
+		MeshType: Plane
 	cr7: crater07
 	cr8: crater08
 	cr9: crater09
@@ -489,6 +494,7 @@ largecraters:
 		UseTilesetExtension: true
 		Offset: 0, -24, 1
 		ZRamp: 1
+		MeshType: Plane
 	cr11: crater11
 	cr12: crater12
 
